--- a/ZenArc V1.2/ZenArcCSS/Findbar.css
+++ b/ZenArc V1.2/ZenArcCSS/Findbar.css
@@ -1,3 +1,11 @@
+# This file includes code from [natsumi-browser] by [greeeen-dev]
+# Source: https://github.com/greeeen-dev/natsumi-browser
+# License: MIT License
+#
+# Copyright (c) [year] [original author]
+#
+# Permission is hereby granted, free of charge, to any person obtaining a copy...
+# https://github.com/greeeen-dev/natsumi-browser/blob/main/LICENSE
 
 /* ==== Findbar ==== */
 
