--- a/ZenArc V1.2/ZenArcCSS/Findbar.css
+++ b/ZenArc V1.2/ZenArcCSS/Findbar.css
@@ -2,7 +2,7 @@
 # Source: https://github.com/greeeen-dev/natsumi-browser
 # License: MIT License
 #
-# Copyright (c) [year] [original author]
+# Copyright (c) 2025 greeeen-dev
 #
 # Permission is hereby granted, free of charge, to any person obtaining a copy...
 # https://github.com/greeeen-dev/natsumi-browser/blob/main/LICENSE
